<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AdminHomeActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/adminHomeWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:paddingTop="96dp"
            android:paddingBottom="96dp"
            android:text="@string/adminActivityWelcomeTitle"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/teal_700"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/assignRoleCustomButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <LinearLayout
            android:id="@+id/assignRoleCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="25dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/viewDetailsCustomButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adminHomeWelcomeTitle"
            android:orientation="vertical"
            android:background="@drawable/homepagebuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_manage_accounts_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/assignRoleCustomButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/adminActivityAssignRole"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/assignRoleCustomButtonInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/adminActivityAssignRoleButtonInfo"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/viewDetailsCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="12dp"
            android:paddingBottom="18dp"
            android:layout_marginBottom="64dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/signOutCustomButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/assignRoleCustomButton"
            android:orientation="vertical"
            android:background="@drawable/homepagebuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_info_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="14dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/viewDetailsCustomButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/adminActivityViewDetails"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/viewDetailsCustomButtonInfo1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/adminActivityViewDetailsButtonInfo1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/viewDetailsCustomButtonInfo2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/adminActivityViewDetailsButtonInfo2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/signOutCustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDetailsCustomButton"
            android:orientation="vertical"
            android:background="@drawable/adminsignoutbuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_logout_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/signOutCustomButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/adminActivitySignOut"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/signOutCustomButtonInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/adminActivitySignOutButtonInfo"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>