<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

<!--        Lottie Animation-->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationPostbox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/postbox_animation"
            app:layout_constraintBottom_toTopOf="@id/appNameInHomeView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

        </com.airbnb.lottie.LottieAnimationView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appNameInHomeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_bold"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@id/appSloganInHomeView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimationPostbox">

        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appSloganInHomeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/app_slogan"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/ash"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/userButtonToActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appNameInHomeView">

        </com.google.android.material.textview.MaterialTextView>

        <LinearLayout
            android:id="@+id/userButtonToActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/adminButtonToActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appSloganInHomeView"
            android:orientation="vertical"
            android:background="@drawable/homepagebuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_account_circle_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/userButtonToActivityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/userLoginActivityButton"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/userButtonToActivityInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/userButtonInfo"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/adminButtonToActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="@+id/phoneBookButtonToActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userButtonToActivity"
            android:orientation="vertical"
            android:background="@drawable/homepagebuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/adminIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_admin_panel_settings_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="14dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

                <LinearLayout
                    android:id="@+id/adminButtonSubgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/adminButtonToActivityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/adminLoginActivityButton"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/adminButtonToActivityInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/adminButtonInfo"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/phoneBookButtonToActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adminButtonToActivity"
            android:orientation="vertical"
            android:background="@drawable/homepagebuttonshape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_contacts_24"
                    android:paddingStart="0dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="4dp"
                    android:scaleX="1.2"
                    android:scaleY="1.2"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/phoneBookButtonToActivityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/phoneBookActivityButton"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/phoneBookButtonToActivityInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/manrope_regular"
                        android:text="@string/phoneBookButtonInfo"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>