<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UserLoginActivity">

        <!--        <com.google.android.material.progressindicator.LinearProgressIndicator-->
        <!--            android:id="@+id/linearProgressIndicator"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            app:layout_constraintBottom_toTopOf="@id/adminPanelLoginTitleLayout"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="parent"/>-->

        <ProgressBar
            android:id="@+id/linearProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userLoginTitleLayout"
            app:layout_constraintVertical_bias="0.713"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/userLoginTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingTop="96dp"
            android:paddingBottom="48dp"
            app:layout_constraintBottom_toTopOf="@id/userLoginIDField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_account_circle_24"
                android:paddingStart="0dp"
                android:paddingEnd="15dp"
                android:paddingTop="0dp"
                android:scaleX="2"
                android:scaleY="2"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/userLoginTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/userLoginTitle"
                app:textAllCaps="true"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/teal_700"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@id/userLoginIDField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

            </com.google.android.material.textview.MaterialTextView>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLoginIDField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/adminLoginID"
            android:textColorHint="@color/ash"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@id/userLoginPasswordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userLoginTitleLayout"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_round_person_24"
            app:startIconTint="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userSignInID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userLoginPasswordField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/adminLoginPassword"
            android:textColorHint="@color/ash"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/teal_700"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/teal_700"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/teal_700"
            app:layout_constraintBottom_toTopOf="@id/forgotUserIDorPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userLoginIDField"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/ic_round_lock_24"
            app:startIconTint="@color/teal_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotUserIDorPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/forgotUserIDorPassword"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/userLoginSignInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userLoginPasswordField">

        </com.google.android.material.textview.MaterialTextView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/userLoginSignInButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:height="60dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/adminLoginSignIn"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700"
            app:cornerRadius="10dp"
            app:rippleColor="@color/teal_900"
            app:strokeColor="@color/teal_700"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotUserIDorPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <ProgressBar-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        />-->

</ScrollView>